[package]
name = "fedcdn"
version = "0.1.0"
authors = ["Praveer Naigaonkar pravs.13@gmail.com>"]
edition = "2024"
description = "A federated learning framework for multi-CDN optimization"
license = "MIT"
repository = "https://github.com/praveer13/fedcdn"

[dependencies]
# We'll add dependencies as we need them

[dev-dependencies]
# We'll add test dependencies later
